<resources>
    <string name="app_name">SoundStacks</string>

    <string name="category_Tab">Stacks</string>
    <string name="allSound_Tab">All Sounds</string>
    <string name="Personal_Tab">Personal</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="uploaded_time">Latest</string>
    <string name="rating">Rating</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="register_fail">Failed to Register, Please try again</string>
    <string name="login_fail">Failed to Login, Please try again</string>
    <string name="email_pass_incorret">Email Id or password is incorrect</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_pass">Invalid Password</string>
    <string name="enter_pass_for_register">Enter new password in the password box</string>
    <string name="invalid_email_for_register">Enter correct e-mail in the e-mail box</string>
    <string name="FB_Communication_fail">Failed to connect to Facebook</string>
    <string name="Login">Login</string>
    <string name="FB_Login">Login via Facebook</string>
    <string name="pass_reset_fail">Failed to Reset password</string>
    <string name="pass_reset_success">Yeah! An email has been sent with reset instructions.</string>
    <string name="activity_fav_sounds">Favorite Sounds</string>
    <string name="activity_Like_sounds">Liked Sounds</string>
    <string name="activity_my_sounds">My sounds</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>
    <string name="play_error">Unable to play this media file</string>

    <string name="bad_extension_error">Sorry, SoundStacks is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, SoundStacks can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sound">SoundActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>


    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ffwd">Fast forward</string>
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>
    <string name="progress_dialog_loading">Loading...</string>
    <string name="time_seconds">seconds</string>

    <string name="taptostart">Tap to Start Recording.</string>
    <string name="taptosop">Tap to Stop Recording.</string>
    <string name="title_activity_save_sound">SaveSound</string>
    <string name="No_Internet_msg">"OOps :( No internet Connection"</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="activity_my_category">My Stacks</string>
    <string name="activity_fav_category">Favourite Stacks</string>
    <string name="login_request">Please Login</string>
    <string name="verify_mail_request">Please verify email address.</string>
    <string name="report">Report</string>
    <string name="title_activity_search_results">Search</string>
    <string name="Search_query">Enter name of sound/tags</string>
    <string name="Download_Fail">Failed to download</string>
    <string name="NO_Item_Prefix">OOps :( You don\'t have any </string>
    <string name="Not_Found">Not found</string>
    <string name="progress_dialog_saving">Preparing</string>
    <string name="Fail_to_set_ringtone">Failed to set Ringtone/Notification</string>
    <string name="success_to_set_ringtone">Successfully set as</string>
    <string name="Add_Sound">Add Sound</string>
    <string name="Record_Audio">Record Audio</string>
    <string name="Import_Audio">Import/Browse Audio</string>
    <string name="Select_Pic_camera">Camera</string>
    <string name="Select_Pic_gallery">Gallery</string>
    <string name="View_Licenses">View Licenses</string>
    <string name="Version_SoundStacks">SoundStacks version</string>
    <string name="Login_Page_Register"><u>Register</u>.</string>
    <string name="ninetySecAllowed">The sound exceeds permissible limits, please adjust using handle bar. Current selection:</string>
    <string name="create_new_category">Create New Stack</string>
    <string name="fail_creating_stack">Fail to create Stack</string>
    <string name="create_new_category_or_create">"select Stack or create new stack"</string>
    <string name="email_Already_Regiter">Email Id already registered</string>
    <string name="stack">Stack</string>
    <string name="creating_stack">Creating Stack</string>
    <string name="creating_stack_limit_reached">you already cross your limit for creating public stack</string>
    <string name="creating_stack_limit_warning">* Only 10 public stack allowed</string>


</resources>
