<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">
      <item
          android:id="@+id/search"
          android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
          android:orderInCategory="101"
          android:title="@string/action_settings"
          app:showAsAction="always"/>
      <item
          android:id="@+id/action_filter"
          android:icon="@drawable/filter"
          android:orderInCategory="100"
          android:title="@string/action_settings"
          app:showAsAction="always">
            <menu >
                  <item
                      android:id="@+id/upload_sort"
                      android:icon="@drawable/history_hard"
                      android:orderInCategory="101"
                      android:title="@string/uploaded_time"
                      app:showAsAction="always"/>
                  <item
                      android:id="@+id/alphabetical_sort"
                      android:icon="@drawable/a_zsorting"
                      android:orderInCategory="101"
                      android:title="@string/alphabetical"
                      app:showAsAction="always"/>
            </menu>
      </item>
</menu>
