<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.startup.soundstack.activities.Login"
    android:id="@+id/parentRL"
    android:focusableInTouchMode="true"
    android:clickable="true"
    >


 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_centerInParent="true"
     android:id="@+id/centerLL">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">

         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:src="@drawable/icon"
             android:id="@+id/iconImage"
             android:layout_centerHorizontal="true"/>

         <com.startup.soundstack.customclass.CustomText
             android:id="@+id/appName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="SoundStacks"
             android:textColor="@color/color_accent"
             android:layout_below="@id/iconImage"
             android:layout_centerHorizontal="true"
             app:customFont="ProximaNovaSoftMedium.ttf"
             android:textSize="35sp"
             android:textStyle="bold"
             />
         <android.support.design.widget.TextInputLayout
             android:id="@+id/emailid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/appName"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="40dp"
             >

             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="13"
                 android:inputType="textEmailAddress"
                 android:hint="Your Email"
                 android:textColorHint="@color/color_primary_dark"
                 android:textColor="@color/color_primary"/>

         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:id="@+id/passwordP"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/emailid"
             android:layout_centerHorizontal="true">
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:ems="13"
                 android:id="@+id/password"
                 android:hint="Your Password "
                 android:textColorHint="@color/color_primary_dark"
                 android:textColor="@color/color_primary"/>
         </android.support.design.widget.TextInputLayout>

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignRight="@id/passwordP"
             android:layout_below="@id/passwordP"
             android:orientation="horizontal"
             android:gravity="right"
             android:id="@+id/forgotP"
             android:layout_marginBottom="15dp">



         <com.startup.soundstack.customclass.CustomText
             android:id="@+id/forgotPass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Forgot Password?"
             android:textColor="@color/color_accent"
             android:background="@drawable/ripple"
             android:clickable="true"
             app:customFont="ProximaNovaSoftMedium.ttf"
             android:onClick="onClick"/>

             <com.startup.soundstack.customclass.CustomText
                 android:id="@+id/register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/Login_Page_Register"
                 android:clickable="true"
                 android:textColor="@color/color_accent"
                 android:layout_marginLeft="5dp"
                 android:background="@drawable/ripple"
                 app:customFont="ProximaNovaSoftMedium.ttf"
                 android:onClick="onClick"
                 />


         </LinearLayout>

         <LinearLayout
             android:id="@+id/signUP"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/forgotP"
             android:layout_alignLeft="@id/passwordP"
             android:layout_alignRight="@id/passwordP"
             android:orientation="vertical">


         <com.startup.soundstack.customclass.CustomButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Login"
             android:textStyle="bold"
             android:textColor="@color/color_white"
             android:layout_weight="1"
             android:id="@+id/loginbtn"
             android:onClick="onClick"
             android:background="@drawable/ripple_cyan"
             app:customFont="ProximaNovaSoftMedium.ttf"
             />

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rippleblue"
             android:orientation="horizontal"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
             android:clickable="true"
             android:onClick="onFBLoginButtonClicked">

             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/com_facebook_button_icon"
                 android:alpha="10"
                 android:gravity="left"
                 android:layout_marginLeft="10dp"/>

             <com.startup.soundstack.customclass.CustomButton
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/FB_Login"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
                 android:textColor="@android:color/white"
                 android:clickable="false"
                 app:customFont="ProximaNovaSoftMedium.ttf"
                 style="?android:attr/borderlessButtonStyle"/>

            </LinearLayout>

        </LinearLayout>

      </RelativeLayout>

 </LinearLayout>

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="10dp"-->
        <!--android:layout_alignRight="@id/centerLL"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_below="@id/centerLL">-->
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:text="Skip >>"-->
        <!--android:textSize="20sp"-->
        <!--android:textStyle="bold"-->
        <!--android:id="@+id/skipText"/>-->
        <!--</RelativeLayout>-->
    <LinearLayout
        android:id="@+id/progrss"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_semi_transparent"
        android:visibility="gone"
        android:orientation="vertical"
        android:gravity="center"
        android:clickable="true">

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminate="true"/>
    </LinearLayout>
</RelativeLayout>
</ScrollView>
